--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
+    "@nestjs/swagger": "^6.3.0",
     "@types/sequelize": "^4.28.15",
     "cross-env": "^7.0.3",
     "pg": "^8.11.0",
@@ -39,7 +40,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.32.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
