--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/swagger": "^6.3.0",
     "@types/sequelize": "^4.28.15",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
@@ -49,6 +51,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
