--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/swagger": "^6.3.0",
     "@types/sequelize": "^4.28.15",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
